Fixed the welcome Address overflow

--- a/votechain_react/src/Components/Welcome/Welcome.css
+++ b/votechain_react/src/Components/Welcome/Welcome.css
@@ -43,7 +43,7 @@
   margin-left: 30px;
   font-weight: 600;
   text-transform: capitalize;
-  cursor: "pointer";
+  cursor: pointer;
 }
 
 .election-time {
@@ -69,5 +69,10 @@
   }
   .election-time {
     margin-bottom: 30px;
+  }
+  .welcome-address {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 320px;
   }
 }
